name:          cell
version:       0.1.0.0
cabal-version: >= 1.18
license:       BSD3

build-type:    Simple
tested-with:   GHC >= 7.4.1

source-repository head
  type: git
  location: git://github.com/mfpi/haskell-game.git

--Test-Suite test-tiled
--  type: exitcode-stdio-1.0
--  main-is: tests/Tiled.hs
--  build-depends: base,
--    htiled,
--    containers,
--   netwire
--  default-language:    Haskell2010

library
    default-language: Haskell2010
    exposed-modules:
        Game.Input.Input
        Game.Input.Actions

        Game.Render.Render
        Game.Render.Map
        Game.Render.Camera
        Game.Render
        Game.Render.Error
        
        Game.Collision 

        Game.World
        Game.World.Types
        Game.World.Import.Tiled
        Game.World.Objects
        Game.World.Delta
        Game.World.Common
        Game.World.Wires

        Game.Network.Common
        Game.Network.Client
        Game.Network.Server

    build-depends:
        base,
        linear >= 1.6 && < 1.7,
        containers >= 0.5 && < 0.6,
        lens >= 4.0 && < 4.1,
        mtl        >= 2.1 && < 2.2,
        random     >= 1.0 && < 1.1,
        vector >= 0.10.9 && < 0.11,
        OpenGL >= 2.9 && < 2.10,
        OpenGLRaw >= 1.4 && < 1.5,
        GLFW-b >= 1.4 && < 1.5,
        array >= 0.4 && < 0.5,
        bytestring >= 0.10 && < 0.11,
        filepath >= 1.3 && < 1.4,
        storable-tuple >= 0.0.2 && < 0.1,
        stm >= 2.4 && < 2.5,
        netwire >= 5.0.0 && < 5.1,
        binary >= 0.7 && < 0.8,
        htiled >= 0.1.1 && < 0.2,
        network-simple >= 0.3 && < 0.4,
        async >= 2.0 && < 2.1,
        pipes-binary >= 0.2.0 && < 0.3,
        pipes-concurrency >= 2.0.0 && < 2.1,
        pipes-network >= 0.6.0 && < 0.7.0,
        pipes >= 4.0.0 && < 4.1,
        JuicyPixels >= 3.1 && < 3.2,
        spacepart >= 0.1 && < 0.2,
        hslogger >= 1.2 && < 1.3

-- TODO remove netwire dependency
executable server
    default-language: Haskell2010
    hs-source-dirs: src/server
    build-depends:
        base,
        cell,
        pipes-binary >= 0.2.0 && < 0.3,
        pipes-concurrency >= 2.0.0 && < 2.1,
        pipes-network >= 0.6.0 && < 0.7.0,
        pipes >= 4.0.0 && < 4.1,
        stm >= 2.4.0 && < 2.5,
        async >= 2.0 && < 2.1,
        network-simple >= 0.3 && < 0.4,
        network >= 2.4 && < 2.5,
        bytestring >= 0.10 && < 0.11,

        netwire >= 5.0 && < 5.1,
        htiled >= 0.1.1 && < 0.2,
        lens >= 4.0 && < 4.1,

        mtl >= 2.1 && < 2.2,
        containers >= 0.5 && < 0.6,
        binary >= 0.7 && < 0.8
    main-is: Server.hs

executable client
    default-language: Haskell2010
    hs-source-dirs: src/client
    build-depends:
        base,
        cell,
        pipes-binary >= 0.2.0 && < 0.3,
        pipes-concurrency >= 2.0.0 && < 2.1,
        pipes-network >= 0.6.0 && < 0.7.0,
        pipes >= 4.0.0 && < 4.1,
        stm >= 2.4.0 && < 2.5,
        async >= 2.0 && < 2.1,
        network-simple >= 0.3 && < 0.4,
        network >= 2.4 && < 2.5,
        bytestring >= 0.10 && < 0.11,

        htiled >= 0.1.1 && < 0.2,
        lens >= 4.0 && < 4.1,
        linear >= 1.6 && < 1.7,
        OpenGL >= 2.9 && < 2.10,
        GLFW-b >= 1.4 && < 1.5,
        netwire >= 5.0 && < 5.1,

        mtl >= 2.1 && < 2.2,
        containers >= 0.5 && < 0.6,
        transformers >= 0.3 && < 0.4,

        pretty >= 1.1 && < 1.2

  ghc-options: -rtsopts -threaded -threaded -fprof-auto
  main-is: main.hs

