name:          cell
version:       0.1.0.0
cabal-version: >= 1.18
license:       BSD3

build-type:    Simple
tested-with:   GHC >= 7.4.1

source-repository head
  type: git
  location: git://github.com/mfpi/haskell-game.git

--Test-Suite test-tiled
--  type: exitcode-stdio-1.0
--  main-is: tests/Tiled.hs
--  build-depends: base,
--    htiled,
--    containers,
--   netwire
--  default-language:    Haskell2010

library
    default-language: Haskell2010
    exposed-modules:
        Game.Input.Input
        Game.Input.Actions

        Game.Game

        Game.World.AI.Basic

        Game.Render.Text
        Game.Render.Render
        Game.Render.Map
        Game.Render.Camera
        Game.Render.Light
        Game.Render
        Game.Render.Error
        Game.Render.World
        Game.Render.Update

        Game.Render.Walls
        
        Game.Collision 

        Game.World.Unit
        
        Game.World
        Game.World.Visibility
        Game.World.Types
        Game.World.Import.Tiled
        Game.World.Objects
        Game.World.ObjectData
        Game.World.Delta
        Game.World.Common
        Game.World.Wires
        Game.World.Lens
        Game.World.Gen
        Game.World.Gen.Frequency
        Game.World.Gen.Types
        Game.World.Gen.Terrain

        Game.Network.Common
        Game.Network.Client
        Game.Network.Server

        Game.Data.Bin
        Game.Data.Tileset

        Game.Wire.Extensions

    build-depends:
        base,
        linear,
        containers >= 0.5,
        freetype2,
        bindings-harfbuzz,
        lens >= 4.0,
        mtl        >= 2.1,
        random     >= 1.0,
        vector >= 0.10.9,
        OpenGL >= 2.9,
        OpenGLRaw >= 1.4,
        GLFW-b >= 1.4,
        array >= 0.4,
        bytestring >= 0.10,
        filepath >= 1.3,
        storable-tuple >= 0.0.2,
        stm >= 2.4,
        netwire,
        binary >= 0.7,
        htiled == 0.1.2.1,
        network-simple >= 0.3,
        async >= 2.0,
        pipes-binary >= 0.2.0,
        pipes-concurrency >= 2.0.0,
        pipes-network >= 0.6.0,
        pipes >= 4.0.0,
        JuicyPixels >= 3.1,
        hslogger >= 1.2,
        Octree >= 0.5,
        monad-parallel >= 0.7,
        parallel,
        time >= 1.4,
        spacepart >= 0.2,
        text >= 1.0.0.1,
        system-filepath >= 0.4.9,
        aeson >= 0.7.0.1,
        resourcet >= 0.4.10,
        regex-compat >= 0.95.1,
        aeson-pretty >= 0.7.0.2,
        data-binary-ieee754 >= 0.4.4,
        unordered-containers

    ghc-options: -rtsopts -threaded -fprof-auto -Wall

-- TODO remove netwire dependency
executable server
    default-language: Haskell2010
    hs-source-dirs: src/server
    build-depends:
        base,
        cell,
        pipes-binary >= 0.2.0,
        pipes-concurrency >= 2.0.0,
        pipes-network >= 0.6.0,
        pipes >= 4.0.0,
        stm >= 2.4.0,
        async >= 2.0,
        network-simple >= 0.3,
        network >= 2.4,
        bytestring >= 0.10,

        netwire >= 5.0,
        htiled == 0.1.2.1,
        lens >= 4.0,

        mtl >= 2.1,
        containers >= 0.5,
        binary >= 0.7,
        parallel,
        Octree >= 0.5
    ghc-options: -rtsopts -threaded -fprof-auto -Wall
    main-is: Server.hs

executable tests
    default-language: Haskell2010
    hs-source-dirs: tests/Render
    main-is: TestMain.hs
    build-depends:
        base,
        cell,
        HUnit,
        lens
    ghc-options: -rtsopts -threaded -fprof-auto -Wall

executable testText
    default-language: Haskell2010
    hs-source-dirs: tests/Text
    main-is: TestMain.hs
    build-depends:
        base,
        cell,
        HUnit,
        lens
    ghc-options: -rtsopts -threaded -fprof-auto -Wall

executable wireTests
    default-language: Haskell2010
    hs-source-dirs: tests/Wire
    main-is: TestMain.hs
    build-depends:
        base,
        netwire,
        cell,
        HUnit,
        lens
    ghc-options: -rtsopts -threaded -fprof-auto -Wall

executable textTests
    default-language: Haskell2010
    hs-source-dirs: tests/Render
    main-is: Text.hs
    build-depends:
        base,
        freetype2,
        vector,
        bytestring,
        JuicyPixels,
        OpenGL
    ghc-options: -rtsopts -threaded -fprof-auto -Wall

executable parseRoom
    default-language: Haskell2010
    hs-source-dirs: tools/asp/
    main-is: parseRoom.hs
    build-depends:
        base,
        regex-posix,
        lens,
        transformers,
        bytestring,
        cell,
        pipes-binary,
        async,
        pipes-concurrency,
        pipes-network,
        pipes,
        htiled == 0.1.2.1,
        network-simple,
        mtl,
        pretty,
        GLFW-b,
        containers,
        netwire,
        stm

    ghc-options: -rtsopts -threaded -fprof-auto -Wall   

executable atlas
    default-language: Haskell2010
    hs-source-dirs: tools/atlas/
    main-is: Main.hs
    buildable:False
    build-depends:
        base,
        cell,
        lens,
        aeson,
        bytestring,
        text,
        system-filepath,
        regex-compat,
        resourcet,
        containers,
        mtl,
        aeson-pretty,
        unordered-containers

    ghc-options: -rtsopts -threaded -fprof-auto -Wall

executable client
    default-language: Haskell2010
    hs-source-dirs: src/client
    build-depends:
        base,
        cell,
        pipes-binary >= 0.2.0,
        pipes-concurrency >= 2.0.0,
        pipes-network >= 0.6.0,
        pipes >= 4.0.0,
        stm >= 2.4.0,
        async >= 2.0,
        network-simple >= 0.3,
        network >= 2.4,
        bytestring >= 0.10,

        htiled == 0.1.2.1,
        lens >= 4.0,
        linear >= 1.6,
        OpenGL >= 2.9,
        GLFW-b >= 1.4,
        netwire >= 5.0,

        mtl >= 2.1,
        containers >= 0.5,
        transformers >= 0.3,

        pretty >= 1.1,
        Octree >= 0.5

  ghc-options: -rtsopts -threaded -fprof-auto -Wall
  main-is: main.hs

