name:          engine
version:       0.1.0.0
cabal-version: >= 1.18
license:       BSD3

build-type:    Simple
tested-with:   GHC >= 7.4.1

source-repository head
  type: git
  location: git://github.com/mfpi/haskell-game.git

library
    default-language: Haskell2010
    hs-source-dirs: src/
    exposed-modules:
        Engine.Input.Input
        Engine.Input.Actions

        Engine.Game

        Engine.World.AI.Basic

        Engine.Render.Render
        Engine.Render.Map
        Engine.Render.Camera
        Engine.Render.Light
        Engine.Render
        Engine.Render.Error
        Engine.Render.World
        Engine.Render.Update

        Engine.Render.Walls

        Engine.Collision

        Engine.World.Unit

        Engine.World
        Engine.World.Visibility
        Engine.World.Types
        Engine.World.Import.Tiled
        Engine.World.Objects
        Engine.World.ObjectData
        Engine.World.Delta
        Engine.World.Common
        Engine.World.Wires
        Engine.World.Lens
        Engine.World.Gen
        Engine.World.Gen.Frequency
        Engine.World.Gen.Types
        Engine.World.Gen.Terrain

        Engine.Network.Common
        Engine.Network.Client
        Engine.Network.Server

        Engine.Data.Bin
        Engine.Data.Tileset

        Engine.Wire.Extensions

    build-depends:
        base,
        linear >= 1.10 && < 1.11,
        containers >= 0.5 && < 0.6,
        lens >= 4.2 && < 4.3,
        mtl        >= 2.1 && < 2.2,
        random     >= 1.0 && < 1.1,
        vector >= 0.10.9 && < 0.11,
        OpenGL >= 2.9 && < 2.10,
        OpenGLRaw >= 1.4 && < 1.5,
        GLFW-b >= 1.4 && < 1.5,
        array >= 0.5 && < 0.6,
        bytestring >= 0.10 && < 0.11,
        filepath >= 1.3 && < 1.4,
        storable-tuple >= 0.0.2 && < 0.1,
        stm >= 2.4 && < 2.5,
        netwire >= 5.0.0 && < 5.1,
        binary >= 0.7 && < 0.8,
        htiled >= 0.1.1 && < 0.2,
        network-simple >= 0.4 && < 0.5,
        async >= 2.0 && < 2.1,
        pipes-binary >= 0.2.0 && < 0.3,
        pipes-concurrency >= 2.0.0 && < 2.1,
        pipes-network == 0.6.0,
        pipes >= 4.0 && < 4.1,
        JuicyPixels >= 3.1 && < 3.2,
        hslogger >= 1.2 && < 1.3,
        Octree >= 0.5 && < 0.6,
        monad-parallel >= 0.7 && < 0.7.2,
        parallel,
        time >= 1.4 && <= 1.5,
        spacepart >= 0.2,
        text >= 1.0.0.1,
        system-filepath >= 0.4.9,
        aeson >= 0.7.0.1,
        resourcet >= 0.4.10,
        regex-compat >= 0.95.1,
        aeson-pretty >= 0.7.0.2,
        data-binary-ieee754 == 0.4.4,
        unordered-containers >= 0.2.3.3
    ghc-options: -rtsopts -threaded -fprof-auto -Wall
